--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -32,7 +32,7 @@ body {
 body {
 	background: #fff;
 	font-size: 15px;
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Lato', 'Lato Regular', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	line-height: 1.4;
 	margin: 50px 0;
 	margin-bottom: 100px;
