--- a/assets/styles/profile.css
+++ b/assets/styles/profile.css
@@ -25,7 +25,9 @@
 @media (max-width: 992px) {
   .basics .basics-item {
     float: left;
-    width: 20%;
+    width: 25%;
+    padding-left: 10px;
+    padding-right: 10px;
   }
 }
 
@@ -36,58 +38,18 @@
 }
 
 .basics .basics-item .icon {
+  position: absolute;
   padding: 0 10px;
   color: #777;
-  vertical-align: middle;
 }
 
 .basics .basics-item .info {
-  font-size: 0.8em;
+  position: relative;
+  left: 40px;
+  padding-right: 25px;
+}
+
+.basics .basics-item .icon,
+.basics .basics-item .info {
   vertical-align: middle;
-}
-
-/* Contact details */
-
-@media (max-width: 768px) {
-  .cccontact-details {
-    text-align: center;
-  }
-}
-
-@media (max-width: 992px) {
-  .cccontact-details .detail .icon {
-    padding: 0 5px 0 0;
-  }
-}
-
-@media (max-width: 768px) {
-  .cccontact-details .detail {
-    position: relative;
-    float: left;
-    width: 100%;
-    min-height: 1px;
-    padding-left: 15px;
-    padding-right: 15px;
-  }
-}
-
-@media (max-width: 992px) {
-  .cccontact-details .detail {
-    position: relative;
-    min-height: 1px;
-    padding-left: 15px;
-    padding-right: 15px;
-    padding: 10px;
-  }
-  .cccontact-details .detail .icon,
-  .cccontact-details .detail .info {
-    display: inline-block;
-  }
-}
-
-@media (max-width: 992px) and (min-width: 768px) {
-  .cccontact-details .detail {
-    float: left;
-    width: 25%;
-  }
 }
