--- a/assets/styles/profile.css
+++ b/assets/styles/profile.css
@@ -18,8 +18,18 @@
   }
 }
 
-.basics .basics-item {
-  padding: 10px 0;
+.basics .basics-item .icon {
+  position: absolute;
+  top: 50%;
+  margin-top: -10px;
+  color: #777;
+}
+
+.basics .basics-item .info {
+  position: relative;
+  left: 30px;
+  padding-right: 30px;
+  vertical-align: middle;
 }
 
 @media (max-width: 992px) {
@@ -29,27 +39,24 @@
     padding-left: 10px;
     padding-right: 10px;
   }
+
+  .basics .basics-item .icon {
+    top: 10px;
+    margin-top: 0;
+  }
+
+  .basics .basics-item .info {
+    padding-right: 12px;
+  }
 }
 
 @media (max-width: 768px) {
   .basics .basics-item {
     width: 100%;
   }
-}
 
-.basics .basics-item .icon {
-  position: absolute;
-  padding: 0 10px;
-  color: #777;
-}
-
-.basics .basics-item .info {
-  position: relative;
-  left: 40px;
-  padding-right: 25px;
-}
-
-.basics .basics-item .icon,
-.basics .basics-item .info {
-  vertical-align: middle;
+  .basics .basics-item .icon {
+    top: 50%;
+    margin-top: -13px;
+  }
 }
