--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -31,6 +31,11 @@ h2 {
   font-size: 24px;
 }
 
+hr {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
 ::selection {
   background: #c2f990;
 }
@@ -197,21 +202,6 @@ h2 {
   ul {
     padding-left: 25px;
   }
-}
-
-.social-links {
-  line-height: 2.5;
-}
-.social-link {
-  margin-left: 5px;
-  min-width: 35px;
-  display: inline-block;
-}
-.social-link:first-child {
-  margin-left: 0;
-}
-.social-link:hover {
-  text-decoration: none;
 }
 
 .card-skills {
