--- a/assets/styles/profile.css
+++ b/assets/styles/profile.css
@@ -1,14 +1,20 @@
+.profile-card-wrapper {
+  padding-right: 0;
+}
+
 @media (max-width: 992px) {
   .profile-card-wrapper {
     position: relative;
+    padding-bottom: 0;
+    padding-right: 10px;
   }
 }
 
 .profile-pic {
   width: 128px;
   height: 128px;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 @media (max-width: 992px) {
