--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -69,3 +69,9 @@ hr {
   margin-top: 10px;
   margin-bottom: 10px;
 }
+
+@media (max-width: 992px) {
+  .card-wrapper {
+    float: none !important;
+  }
+}
