--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,7 +1,3 @@
-.clear-margin {
-  margin: 0;
-}
-
 .space-right {
   margin-right: 10px;
 }
@@ -12,11 +8,6 @@
   margin-left: 5px;
 }
 
-@media (max-width: 992px) {
-  .clear-margin-sm {
-    margin-bottom: 0;
-  }
-}
 
 .detail {
   padding: 10px 50px;
@@ -25,6 +16,16 @@
 .detail h3 {
   position: relative;
   left: -44px;
+}
+
+@media (max-width: 768px) {
+  .detail {
+    padding: 10px;
+  }
+
+  .detail h3 {
+    position: static;
+  }
 }
 
 .detail h3 i {
@@ -40,11 +41,17 @@
 }
 
 .detail-item-content {
-  padding: 0;
+  padding: 0 10px 0 0;
 }
 
 .detail-item-content.col-sm-9 {
   border-right: 1px solid #ccd6dd;
+}
+
+@media (max-width: 768px) {
+  .detail-item-content.col-sm-9 {
+    border: none;
+  }
 }
 
 .labels {
