--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -19,7 +19,7 @@ body {
   min-width: 320px;
   /* TODO max-width: 1280px; */
   font-size: 16px;
-  font-family: 'Lato', 'Lato Regular', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 300;
   background-color: #e1e8ed;
   color: #292f33;
