--- a/assets/styles/profile.css
+++ b/assets/styles/profile.css
@@ -1,15 +1,3 @@
-.profile-card-wrapper {
-  padding-right: 0;
-}
-
-@media (max-width: 992px) {
-  .profile-card-wrapper {
-    position: relative;
-    padding-bottom: 0;
-    padding-right: 10px;
-  }
-}
-
 .profile-pic {
   width: 128px;
   height: 128px;
@@ -17,7 +5,7 @@
   margin-bottom: 10px;
 }
 
-@media (max-width: 992px) {
+@media (max-width: 991px) {
   h1, h2, .profile-pic {
     margin-top: 5px;
     margin-bottom: 5px;
@@ -37,36 +25,13 @@
   vertical-align: middle;
 }
 
-@media (max-width: 992px) {
-  .basics .basics-item {
-    float: left;
-    width: 25%;
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .basics .basics-item .icon {
-    top: 10px;
-    margin-top: 0;
-  }
-
-  .basics .basics-item .info {
-    padding-right: 12px;
-  }
-}
-
-@media (max-width: 768px) {
-  .basics .basics-item {
-    width: 100%;
-  }
-
-  .basics .basics-item .icon {
-    top: 50%;
-    margin-top: -13px;
-  }
-}
-
 .social-profiles .profile-item a {
   padding: 10px;
   color: inherit;
+}
+
+@media (max-width: 767px) {
+  .social-profiles .profile-item a {
+    text-align: left;
+  }
 }
