--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -15,9 +15,12 @@ html, body, button {
   text-rendering: auto;
 }
 
+html {
+  background-color: #292f33;
+}
+
 body {
   min-width: 320px;
-  /* TODO max-width: 1280px; */
   font-size: 16px;
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 300;
