--- a/assets/styles/profile.css
+++ b/assets/styles/profile.css
@@ -1,14 +1,14 @@
 .profile-pic {
   width: 128px;
   height: 128px;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
-@media (max-width: 991px) {
+@media (min-width: 992px) {
   h1, h2, .profile-pic {
-    margin-top: 5px;
-    margin-bottom: 5px;
+    margin-top: 10px;
+    margin-bottom: 10px;
   }
 }
 
@@ -28,11 +28,12 @@
 .social-profiles .profile-item a {
   padding: 10px;
   color: inherit;
+  text-align: left;
 }
 
-@media (max-width: 767px) {
+@media (min-width: 768px) {
   .social-profiles .profile-item a {
-    text-align: left;
+    text-align: center;
   }
 }
 
