--- a/assets/styles/print.css
+++ b/assets/styles/print.css
@@ -1,32 +1,14 @@
 @media print {
-  a[href]:after {
+  .basics a[href]:after {
     content: none !important;
   }
-  .profile-card {
-    text-align: center;
-  }
+
   .profile-pic {
-    display: inline-block;
-    vertical-align: middle;
+    border-radius: 0 !important;
+    margin-bottom: 20px;
   }
-  .profile-pic img {
-    border-radius: 0;
-  }
-  .name-and-profession {
-    display: inline-block;
-    vertical-align: middle;
-    margin-left: 15px;
-  }
-  .contact-details .detail {
-    position: relative;
-    float: left;
-    width: 25%;
-    min-height: 1px;
-    padding-left: 15px;
-    padding-right: 15px;
-    padding: 0;
-  }
-  .pagebreak {
+
+  .details-card-wrapper {
     page-break-before: always;
   }
 }
