--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -9,11 +9,16 @@
     position: fixed;
     height: 100%;
     padding-right: 0;
+    padding-bottom: 10px;
   }
 
   .card-wrapper {
     float: right;
   }
+}
+
+.profile-card-wrapper + .card-wrapper {
+  padding-bottom: 0px;
 }
 
 .detail {
