--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -62,7 +62,14 @@ h4 {
 
 blockquote {
   margin: 0;
+  padding: 10px 0 10px 10px;
   border-left: 5px solid #e1e8ed;
+}
+
+@media (min-width: 768px) {
+  blockquote {
+    padding: 10px 20px;
+  }
 }
 
 blockquote footer {
