Switch to pleeease / PostCSS for CSS build toolchain

--- a/resume.hbs
+++ b/resume.hbs
@@ -10,12 +10,7 @@
   <title>{{resume.basics.name}}{{#if resume.basics.label}} — {{resume.basics.label}}{{/if}}</title>
 
   <style>
-    {{> opensans}}
-    {{> icomoon}}
-    {{> bootstrap}}
-    {{> global}}
-    {{> profile}}
-    {{> style}}
+    {{> css}}
   </style>
 
   <meta name="HandheldFriendly" content="True">
