--- a/resume.hbs
+++ b/resume.hbs
@@ -30,6 +30,15 @@
   <meta name="author" content="{{resume.basics.name}}">
   <meta name="description" content="{{#if resume.basics.summary}}{{truncate resume.basics.summary 120}}{{else}}{{resume.basics.name}}{{#if resume.basics.label}} — {{resume.basics.label}}{{/if}}{{/if}}">
 
+  {{#if resume.basics.label}}
+    <meta name="twitter:label1" content="Job">
+    <meta name="twitter:data1" content="{{resume.basics.label}}">
+  {{/if}}
+  {{#if resume.basics.website}}
+    <meta name="twitter:label2" content="Site">
+    <meta name="twitter:data2" content="{{resume.basics.website}}">
+  {{/if}}
+
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7/html5shiv.min.js"></script>
