--- a/resume.hbs
+++ b/resume.hbs
@@ -599,5 +599,10 @@
     window.downloadName = (name ? name + '-' : '') + 'resume.html';
     {{> javascript}}
   </script>
+
+  {{#if resume.google_analytics_id}}
+    <script>window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;ga('create', '{{ resume.google_analytics_id }}','auto');ga('send','pageview');</script>
+    <script src='https://www.google-analytics.com/analytics.js' async defer></script>
+  {{/if}}
 </body>
 </html>
