Remove harmful alt on profile picture image

--- a/resume.hbs
+++ b/resume.hbs
@@ -47,7 +47,7 @@
         <div class="card">
           {{#resume.basics}}
             {{#if picture}}
-              <img class="profile-pic media-object img-circle center-block" src="{{picture}}" alt="128x128" width="128" height="128" itemprop="image">
+              <img class="profile-pic media-object img-circle center-block" src="{{picture}}" alt="" width="128" height="128" itemprop="image">
             {{/if}}
 
             {{#if name}}
